--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "mongodb": "^6.11.0",
     "moviedb-promise": "^4.0.7",
-    "public-ip": "^7.0.1"
+    "public-ip": "^7.0.1",
+    "uuid": "^11.0.3"
   }
 }
